--- a/my-app/css/styles.css
+++ b/my-app/css/styles.css
@@ -11,7 +11,7 @@
 body {
   margin: 0;
   color: var(--text-color);
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 ul,
 li {
